[package]
name = "metadata-file-rename"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5.5"
reqwest = "0.11.18"
serde =  { version = "1.0.163", features= ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1.28.2", features = ["full"] }
